--- a/playbook.yml
+++ b/playbook.yml
@@ -14,3 +14,34 @@
             eval $(thefuck --alias)
             eval $(thefuck --alias FUCK)
 
+- hosts: aws
+
+  tasks:
+      - name: Installs thefuck web server
+        become: yes
+        apt: pkg=thefuck state=installed update_cache=true
+
+      - name: Inserting a line after a pattern in Ansible example
+        lineinfile:
+          path: ~/.bashrc
+          line: |
+            eval $(thefuck --alias)
+            eval $(thefuck --alias FUCK)
+
+- hosts: saltshack
+
+  tasks:
+      - name: Installs thefuck web server
+        become: yes
+        apt: pkg=thefuck state=installed update_cache=true
+
+      - name: Inserting a line after a pattern in Ansible example
+        lineinfile:
+          path: ~/.bashrc
+          line: |
+            eval $(thefuck --alias)
+            eval $(thefuck --alias FUCK)
+
+
+
+
