--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,12 @@
 ---
 
-- hosts: all
-  become: true
+- hosts: ansible
+  become: yes
+
+  pre_tasks:
+    - name: Install python for Ansible
+      raw: test -e /usr/bin/python || (apt -y update && apt install -y python2 python-simplejson)
+      changed_when: False
 
   tasks:
     - name: Installs thefuck web server
@@ -15,26 +20,26 @@
           eval $(thefuck --alias)
           eval $(thefuck --alias FUCK)
 
-     -name: Installs Z web server
+    - name: Installs Z web server
       become: yes
       apt: pkg=z state=installed update_cache=true
 
-     -name: Installs Fish
+    - name: Installs Fish
       become: yes
       apt: pkg=fish state=installed update_cache=true
 
-     -name: Installs Rip Grep
+    - name: Installs Rip Grep
       become: yes
       apt: pkg=ripgrep state=installed update_cache=true
 
-     -name: Installs Vim
-       become: yes
-       apt: pkg=vim state=installed update_cache=true
+    - name: Installs Vim
+      become: yes
+      apt: pkg=vim state=installed update_cache=true
 
-     -name: Installs Neovim
+    - name: Installs Neovim
       become: yes
       apt: pkg=neovim state=installed update_cache=true
 
-     -name: Installs OMF "oh my fish"
+    - name: Installs OMF "oh my fish"
       become: yes
       apt: pkg=omf state=installed update_cache=true
