--- a/playbook.yml
+++ b/playbook.yml
@@ -1,11 +1,11 @@
 ---
-
-- hosts: ansible
+- hosts: all
   become: yes
+  gather_facts: False
 
   pre_tasks:
     - name: Install python for Ansible
-      raw: test -e /usr/bin/python || (apt -y update && apt install -y python2 python-simplejson)
+      raw: test -e /usr/bin/python || (apt -y update && apt install -y python python-simplejson)
       changed_when: False
 
   tasks:
